[package]
name = "weather_app"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.6"
dominator = "0.5.21"
wasm-bindgen = "0.2.74"
futures-signals = "0.3.20"
serde_json = "1.0.64"
serde_derive = "1.0.126"
web-sys = "0.3.69"


[profile.dev]
opt-level = 1 # Low optimization level to reduce compile time
debug = true # Enable debug information for easier debugging
overflow-checks = true # Enable integer overflow checks for safety
lto = false # Disable Link Time Optimization for faster compile times
incremental = true # Enable incremental compilation for faster rebuilds
codegen-units = 16 # Increase codegen units to improve parallel compilation
rpath = false # Disable runtime path embedding
panic = "unwind" # Keep the default panic strategy to allow stack unwinding for debugging

[profile.dev.package-override]
opt-level = 0 # Ensure dependencies are built with minimal optimization


[profile.release]
opt-level = "z" # Use "z" for size optimization; switch to 3 for maximum performance optimization
lto = "thin" # ThinLTO for scalable Link Time Optimization
debug = false # Disable debug information
codegen-units = 1 # Single codegen unit for better optimization
incremental = false # Disable incremental compilation for best optimization
rpath = false # Disable runtime path
panic = "abort" # Abort on panic for smaller binaries
overflow-checks = false # Disable integer overflow checks
strip = "symbols" # Strip symbols from the binary

[profile.release.build-override]
opt-level = 3 # Ensure build scripts are also optimized